--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -1,13 +1,6 @@
-.transactionHistory{ 
-    margin: 0 auto;
-        border: 2px solid black;
-}
-th{ 
-    background-color: rgb(233, 0, 0);
-}
-.trclass{
-    text-align: center;
-}
-.tdclass{
-         border: 2px solid black;
+.transactionHistory {
+  border: 1px solid #8f8c8c;
+  background-color: #000000;
+  color: white;
+  margin: 0 auto 200px auto;
 }
